# sherpa-cli

./: .env  .travis.yml  Cargo.toml  README.md  circle.yml
migrations/20170204231023_create_users/: up.sql
src/: authentication.rs  cli.rs  client.rs  config.rs  deploy.rs  error.rs  lib.rs  main.rs  schema.rs  user.rs
tests/: auth.rs  config.rs  deploy.rs  support.rs  tests.rs
