[package]
name = "sherpa"
version = "0.0.1"
authors = ["Michael Stock <mikeastock@gmail.com>"]
description = "A command line tool for interacting with Sherpa"
license = "MIT"
documentation = "https://github.com/mikeastock/sherpa-cli"
homepage = "https://github.com/mikeastock/sherpa-cli"
repository = "https://github.com/mikeastock/sherpa-cli"

[dependencies]
clap = "2.20"
git2 = "0.6"
reqwest = "0.4.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dev-dependencies]
tempdir = "0.3.4"
